--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </header>
 
     <main>
+        <!-- Hero Section: Phần giới thiệu chính -->
         <section id="hero" class="hero-section">
             <div class="container">
                 <div class="hero-content">
@@ -86,6 +87,7 @@
                 </div>
             </div>
         </section>
+        <!-- Ý Nghĩa Chiến Dịch -->
         <section id="y-nghia" class="section-padding">
             <div class="container">
                 <h2 class="section-title" data-aos="fade-up" data-aos-duration="800">Ý Nghĩa Chiến Dịch</h2>
