About us + video

--- a/index.html
+++ b/index.html
@@ -58,16 +58,17 @@
             </div>
         </section>
         <!-- Về Chúng tôi -->
-        <section id="ve-chung-toi" class="section-padding bg-light">
+        <section id="ve-chung-toi" class="section-padding">
             <div class="container">
                 <h2 class="section-title" data-aos="fade-up" data-aos-duration="800">Về Chúng Tôi</h2>
                 <div class="about-us-grid">
                     <div class="about-us-text" data-aos="fade-right" data-aos-delay="100" data-aos-duration="900">
                         <p>
-                            "Hành Trình Quê Hương" là một sáng kiến cộng đồng được tạo ra với niềm đam mê sâu sắc dành
-                            cho văn hóa và cảnh đẹp Việt Nam. Chúng tôi tin rằng mỗi người con đất Việt đều mang trong
-                            mình một câu chuyện độc đáo về nơi mình sinh ra và lớn lên. Chiến dịch này ra đời nhằm tạo
-                            ra một không gian để những câu chuyện ấy được kể, được chia sẻ và được lan tỏa.
+                            "Hành Trình Quê Hương" được khởi xướng với sứ mệnh cao cả là tạo ra một không gian số, nơi
+                            mọi người con Việt Nam, dù ở bất cứ đâu, cũng có thể tìm về và chia sẻ tình yêu, ký ức về
+                            quê hương mình. Chúng tôi tin rằng mỗi vùng đất, mỗi con người đều mang trong mình những câu
+                            chuyện độc đáo, và việc lan tỏa những câu chuyện ấy sẽ góp phần gìn giữ và phát huy giá trị
+                            văn hóa Việt.
                         </p>
                         <p>
                             Sứ mệnh của chúng tôi là kết nối cộng đồng, từ những người đang sinh sống tại Việt Nam đến
@@ -87,8 +88,9 @@
                 </div>
             </div>
         </section>
+
         <!-- Ý Nghĩa Chiến Dịch -->
-        <section id="y-nghia" class="section-padding">
+        <section id="y-nghia" class="section-padding bg-light">
             <div class="container">
                 <h2 class="section-title" data-aos="fade-up" data-aos-duration="800">Ý Nghĩa Chiến Dịch</h2>
                 <p class="section-description" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
@@ -117,8 +119,8 @@
                 </div>
             </div>
         </section>
-
-        <section id="muc-tieu" class="section-padding bg-light">
+        <!-- Mục Tiêu Cuộc Thi -->
+        <section id="muc-tieu" class="section-padding">
             <div class="container">
                 <h2 class="section-title" data-aos="fade-up" data-aos-duration="800">Mục Tiêu Cuộc Thi</h2>
                 <div class="goals-grid">
@@ -141,8 +143,8 @@
                 </div>
             </div>
         </section>
-
-        <section id="cach-tham-gia" class="section-padding">
+        <!-- Cách Tham Gia -->
+        <section id="cach-tham-gia" class="section-padding bg-light">
             <div class="container">
                 <h2 class="section-title" data-aos="fade-up" data-aos-duration="800">Cách Tham Gia</h2>
                 <p class="section-description" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
@@ -180,7 +182,7 @@
             </div>
         </section>
         <!-- Bài dự thi -->
-        <section id="bai-du-thi" class="section-padding bg-light">
+        <section id="bai-du-thi" class="section-padding ">
             <div class="container">
                 <h2 class="section-title" data-aos="fade-up" data-aos-duration="800">Bài Dự Thi Nổi Bật</h2>
                 <p class="section-description" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
@@ -280,7 +282,23 @@
             </div>
         </section>
 
-
+        <!-- Bắt đầu phần mới: Video Quảng Bá -->
+        <section class="video-promo-section section-padding">
+            <div class="container">
+                <h2 class="section-title" data-aos="fade-up" data-aos-duration="800">Khám Phá Hành Trình Quê Hương</h2>
+                <p class="section-description" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
+                    Cùng xem video giới thiệu để hiểu rõ hơn về sứ mệnh và những giá trị mà "Hành Trình Quê Hương" mang
+                    lại.
+                </p>
+                <div class="video-wrapper" data-aos="zoom-in" data-aos-delay="200" data-aos-duration="1000">
+                    <iframe src="https://www.youtube.com/embed/R3jtth1dfg4" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+        <!-- Kết thúc  -->
+        <!-- Cách đăng ký -->
         <section id="dang-ky" class="cta-section section-padding">
             <div class="container">
                 <h2 class="section-title text-white" data-aos="fade-up" data-aos-duration="800">Sẵn Sàng Chia Sẻ Câu
@@ -321,7 +339,7 @@
         </section>
 
     </main>
-
+    <!-- Footer -->
     <footer class="main-footer">
         <div class="container footer-grid">
             <div class="footer-col footer-info">
