--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 Đà Lạt - Thành Phố Ngàn Hoa
                             </h1>
                             <p class="subtitle" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000">
-                                Khám phá vẻ đẹp thơ mộng của cao nguyên Lâm Đồng với khí hậu mát mẻ quanh năm
+                               Đà Lạt – nơi trái tim từng vụn vỡ cũng thấy mình dịu lại
                             </p>
                             <a href="#dang-ky" class="btn btn-primary" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1000">
                                 Tham Gia Ngay
