--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 Vịnh Hạ Long - Kỳ Quan Thiên Nhiên
                             </h1>
                             <p class="subtitle" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000">
-                                Chiêm ngưỡng di sản thiên nhiên thế giới với hàng ngàn đảo đá vôi huyền ảo
+                                Nơi sóng hát thay lời, và đá núi kể chuyện ngàn năm
                             </p>
                             <a href="#dang-ky" class="btn btn-primary" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1000">
                                 Tham Gia Ngay
