Thêm Section Parallax với Bài Thơ Quê Hương

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Merriweather:wght@400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Merriweather:wght@400;700&family=Crimson+Text:ital,wght@0,400;0,600;1,400&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
@@ -151,6 +151,35 @@
                     </div>
                     <div class="about-us-image" data-aos="fade-left" data-aos-delay="300" data-aos-duration="900">
                         <img src="img/hcm.jpg" alt="Vietnamese ">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Section Parallax với Bài Thơ -->
+        <section class="parallax-poem-section">
+            <div class="parallax-background"></div>
+            <div class="parallax-overlay"></div>
+            <div class="parallax-grain"></div>
+            
+            <div class="container parallax-content">
+                <div class="poem-container" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="300">
+                    <div class="poem-text">
+                        <p class="poem-line" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
+                            "Quê hương là chùm khế ngọt
+                        </p>
+                        <p class="poem-line" data-aos="fade-up" data-aos-delay="700" data-aos-duration="1000">
+                            Cho con trèo hái mỗi ngày
+                        </p>
+                        <p class="poem-line" data-aos="fade-up" data-aos-delay="900" data-aos-duration="1000">
+                            Quê hương là đường đi học
+                        </p>
+                        <p class="poem-line" data-aos="fade-up" data-aos-delay="1100" data-aos-duration="1000">
+                            Con về rợp bướm vàng bay"
+                        </p>
+                    </div>
+                    <div class="poem-author" data-aos="fade-up" data-aos-delay="1300" data-aos-duration="1000">
+                        – Đỗ Trung Quân –
                     </div>
                 </div>
             </div>
