Thêm section parallax với câu thơ quê hương

--- a/index.html
+++ b/index.html
@@ -248,6 +248,25 @@
                 </div>
             </div>
         </section>
+
+        <!-- Parallax Quote Section - Câu thơ về quê hương -->
+        <section class="parallax-quote-section" data-aos="fade-up" data-aos-duration="1000">
+            <div class="parallax-overlay"></div>
+            <div class="container">
+                <div class="quote-content">
+                    <p class="quote-text" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1200">
+                        "Quê hương là chùm khế ngọt<br>
+                        Cho con trèo hái mỗi ngày<br>
+                        Quê hương là đường đi học<br>
+                        Con về rợp bướm vàng bay"
+                    </p>
+                    <p class="quote-author" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+                        - Đỗ Trung Quân -
+                    </p>
+                </div>
+            </div>
+        </section>
+
         <!-- Bài dự thi -->
         <section id="bai-du-thi" class="section-padding ">
             <div class="container">
