Cập nhật footer và tối ưu tổng thể

--- a/index.html
+++ b/index.html
@@ -368,22 +368,6 @@
             </div>
         </section>
 
-        <!-- Bắt đầu phần mới: Video Quảng Bá -->
-        <section class="video-promo-section section-padding">
-            <div class="container">
-                <h2 class="section-title" data-aos="fade-up" data-aos-duration="800">Khám Phá Hành Trình Quê Hương</h2>
-                <p class="section-description" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
-                    Cùng xem video giới thiệu để hiểu rõ hơn về sứ mệnh và những giá trị mà "Hành Trình Quê Hương" mang
-                    lại.
-                </p>
-                <div class="video-wrapper" data-aos="zoom-in" data-aos-delay="200" data-aos-duration="1000">
-                    <iframe src="https://www.youtube.com/embed/R3jtth1dfg4" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
-            </div>
-        </section>
-        <!-- Kết thúc  -->
         <!-- Cách đăng ký -->
         <section id="dang-ky" class="cta-section section-padding">
             <div class="container">
@@ -427,30 +411,67 @@
     </main>
     <!-- Footer -->
     <footer class="main-footer">
-        <div class="container footer-grid">
-            <div class="footer-col footer-info">
-                <div class="logo">
-                    <a href="#hero">Hành Trình Quê Hương</a>
+        <div class="container">
+            <div class="footer-grid">
+                <!-- Thông tin chính -->
+                <div class="footer-col footer-info">
+                    <div class="logo">
+                        <a href="#hero">Hành Trình Quê Hương</a>
+                    </div>
+                    <p class="footer-tagline">Kết nối, lưu giữ và chia sẻ những câu chuyện, hình ảnh về quê hương Việt Nam yêu dấu</p>
                 </div>
-                <p>&copy; 2023 Hành Trình Quê Hương. All rights reserved.</p>
-            </div>
-            <div class="footer-col footer-links">
-                <h3>Liên Kết Nhanh</h3>
-                <ul>
-                    <li><a href="#y-nghia">Ý Nghĩa Chiến Dịch</a></li>
-                    <li><a href="#muc-tieu">Mục Tiêu Cuộc Thi</a></li>
-                    <li><a href="#cach-tham-gia">Cách Tham Gia</a></li>
-                    <li><a href="#bai-du-thi">Bài Dự Thi Nổi Bật</a></li>
-                </ul>
-            </div>
-            <div class="footer-col footer-social-cta">
-                <h3>Kết Nối Với Chúng Tôi</h3>
-                <div class="social-links">
-                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+
+                <!-- Liên kết nhanh -->
+                <div class="footer-col footer-links">
+                    <h3>Liên Kết Nhanh</h3>
+                    <ul>
+                        <li><a href="#y-nghia">Ý Nghĩa Chiến Dịch</a></li>
+                        <li><a href="#muc-tieu">Mục Tiêu Cuộc Thi</a></li>
+                        <li><a href="#cach-tham-gia">Cách Tham Gia</a></li>
+                        <li><a href="#bai-du-thi">Bài Dự Thi Nổi Bật</a></li>
+                    </ul>
                 </div>
-                <a href="#dang-ky" class="btn btn-secondary footer-cta-btn">Đăng Ký Ngay</a>
+
+                <!-- Thông tin liên hệ -->
+                <div class="footer-col footer-contact">
+                    <h3>Thông Tin Liên Hệ</h3>
+                    <div class="contact-info">
+                        <div class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>123 Đường Nguyễn Huệ, Quận 1, TP.HCM</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-phone"></i>
+                            <span>+84 123 456 789</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            <span>info@hanhtrinhquehuong.vn</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-clock"></i>
+                            <span>Thứ 2 - Thứ 6: 8:00 - 17:00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Mạng xã hội và CTA -->
+                <div class="footer-col footer-social-cta">
+                    <h3>Kết Nối Với Chúng Tôi</h3>
+                    <div class="social-links">
+                        <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="#" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+                        <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                    </div>
+                    <a href="#dang-ky" class="btn btn-secondary footer-cta-btn">Đăng Ký Ngay</a>
+                </div>
+            </div>
+
+            <!-- Copyright -->
+            <div class="footer-bottom">
+                <div class="footer-divider"></div>
+                <p class="copyright">&copy; 2023 Hành Trình Quê Hương. All rights reserved.</p>
             </div>
         </div>
     </footer>
