Cập nhật footer và hiệu ứng card

--- a/index.html
+++ b/index.html
@@ -277,7 +277,15 @@
                 <div class="submission-grid">
                     <!-- Card 1 -->
                     <div class="submission-card" data-aos="fade-up" data-aos-delay="200" data-aos-duration="900">
-                        <img src="img/lang-chai-rach-vem-binh-minh.jpg" alt="Làng chài Việt Nam">
+                        <div class="card-image-wrapper">
+                            <img src="img/lang-chai-rach-vem-binh-minh.jpg" alt="Làng chài Việt Nam">
+                            <div class="card-overlay">
+                                <div class="card-overlay-content">
+                                    <i class="fas fa-eye"></i>
+                                    <span>Xem chi tiết</span>
+                                </div>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h3>Bình Minh Làng Chài</h3>
                             <p class="description">Bình minh trên làng chài Rạch Vẹm, Phú Quốc, mang đến vẻ đẹp yên bình
@@ -292,7 +300,15 @@
                     </div>
                     <!-- Card 2 -->
                     <div class="submission-card" data-aos="fade-up" data-aos-delay="300" data-aos-duration="900">
-                        <img src="img/vinh-ha-long.jpg" alt="Vịnh Hạ Long">
+                        <div class="card-image-wrapper">
+                            <img src="img/vinh-ha-long.jpg" alt="Vịnh Hạ Long">
+                            <div class="card-overlay">
+                                <div class="card-overlay-content">
+                                    <i class="fas fa-eye"></i>
+                                    <span>Xem chi tiết</span>
+                                </div>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h3>Vịnh Hạ Long Huyền Ảo</h3>
                             <p class="description">Vịnh Hạ Long, di sản thiên nhiên thế giới, với hàng ngàn đảo đá vôi
@@ -307,7 +323,15 @@
                     </div>
                     <!-- Card 3 -->
                     <div class="submission-card" data-aos="fade-up" data-aos-delay="400" data-aos-duration="900">
-                        <img src="img/Hội An.jfif" alt="Phố cổ Hội An">
+                        <div class="card-image-wrapper">
+                            <img src="img/Hội An.jfif" alt="Phố cổ Hội An">
+                            <div class="card-overlay">
+                                <div class="card-overlay-content">
+                                    <i class="fas fa-eye"></i>
+                                    <span>Xem chi tiết</span>
+                                </div>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h3>Nét Đẹp Phố Cổ Hội An</h3>
                             <p class="description">Hội An với những con phố đèn lồng lung linh, kiến trúc cổ kính và ẩm
@@ -322,7 +346,15 @@
                     </div>
                     <!-- Card 4 -->
                     <div class="submission-card" data-aos="fade-up" data-aos-delay="500" data-aos-duration="900">
-                        <img src="img/sapa-mua-lua-chin-1.jpg" alt="Ruộng bậc thang Sapa">
+                        <div class="card-image-wrapper">
+                            <img src="img/sapa-mua-lua-chin-1.jpg" alt="Ruộng bậc thang Sapa">
+                            <div class="card-overlay">
+                                <div class="card-overlay-content">
+                                    <i class="fas fa-eye"></i>
+                                    <span>Xem chi tiết</span>
+                                </div>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h3>Sapa Mùa Lúa Chín</h3>
                             <p class="description">Ruộng bậc thang Sapa vào mùa lúa chín vàng óng ả, tạo nên khung cảnh
@@ -337,7 +369,15 @@
                     </div>
                     <!-- Card 5 -->
                     <div class="submission-card" data-aos="fade-up" data-aos-delay="600" data-aos-duration="900">
-                        <img src="img/cho noi cái răng.jpg" alt="Chợ nổi Cái Răng">
+                        <div class="card-image-wrapper">
+                            <img src="img/cho noi cái răng.jpg" alt="Chợ nổi Cái Răng">
+                            <div class="card-overlay">
+                                <div class="card-overlay-content">
+                                    <i class="fas fa-eye"></i>
+                                    <span>Xem chi tiết</span>
+                                </div>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h3>Chợ Nổi Cái Răng</h3>
                             <p class="description">Chợ nổi Cái Răng, Cần Thơ, là nét văn hóa đặc trưng của miền Tây sông
@@ -351,7 +391,15 @@
                     </div>
                     <!-- Card 6 -->
                     <div class="submission-card" data-aos="fade-up" data-aos-delay="700" data-aos-duration="900">
-                        <img src="img/kham-pha-hue-mong-mo.jpg" alt="Kinh thành Huế">
+                        <div class="card-image-wrapper">
+                            <img src="img/kham-pha-hue-mong-mo.jpg" alt="Kinh thành Huế">
+                            <div class="card-overlay">
+                                <div class="card-overlay-content">
+                                    <i class="fas fa-eye"></i>
+                                    <span>Xem chi tiết</span>
+                                </div>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h3>Cố Đô Huế Thâm Nghiêm</h3>
                             <p class="description">Kinh thành Huế, nơi lưu giữ những giá trị lịch sử và văn hóa của
@@ -447,10 +495,6 @@
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <span>info@hanhtrinhquehuong.vn</span>
-                        </div>
-                        <div class="contact-item">
-                            <i class="fas fa-clock"></i>
-                            <span>Thứ 2 - Thứ 6: 8:00 - 17:00</span>
                         </div>
                     </div>
                 </div>
