--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                     <div class="contact-info">
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>123 Đường Nguyễn Huệ, Quận 1, TP.HCM</span>
+                            <span>613 ÂU CƠ, PHƯỜNG PHÚ TRUNG, TP.HCM</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
