--- a/index.html
+++ b/index.html
@@ -416,6 +416,208 @@
             </div>
         </section>
 
+        <!-- Cảm Xúc Cộng Đồng -->
+        <section id="cam-xuc-cong-dong" class="section-padding bg-light">
+            <div class="container">
+                <h2 class="section-title" data-aos="fade-up" data-aos-duration="800">Cảm Xúc Cộng Đồng</h2>
+                <p class="section-description" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
+                    Những chia sẻ chân thành từ trái tim của cộng đồng về tình yêu quê hương và ý nghĩa của chiến dịch.
+                </p>
+                
+                <div class="emotions-grid">
+                    <!-- Testimonial 1 -->
+                    <div class="emotion-card" data-aos="fade-up" data-aos-delay="200" data-aos-duration="900">
+                        <div class="emotion-content">
+                            <div class="quote-icon">
+                                <i class="fas fa-quote-left"></i>
+                            </div>
+                            <p class="emotion-text">
+                                "Tham gia 'Hành Trình Quê Hương' giúp tôi nhận ra rằng mỗi góc phố, mỗi con người ở quê nhà đều có những câu chuyện đẹp đẽ riêng. Tôi cảm thấy tự hào hơn về nơi mình sinh ra và lớn lên."
+                            </p>
+                            <div class="emotion-author">
+                                <div class="author-avatar">
+                                    <img src="https://images.pexels.com/photos/1239291/pexels-photo-1239291.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Nguyễn Minh Anh">
+                                </div>
+                                <div class="author-info">
+                                    <h4>Nguyễn Minh Anh</h4>
+                                    <p>Hà Nội</p>
+                                    <div class="emotion-rating">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 2 -->
+                    <div class="emotion-card" data-aos="fade-up" data-aos-delay="300" data-aos-duration="900">
+                        <div class="emotion-content">
+                            <div class="quote-icon">
+                                <i class="fas fa-quote-left"></i>
+                            </div>
+                            <p class="emotion-text">
+                                "Là người xa quê, chiến dịch này như một cây cầu nối giúp tôi gần gũi hơn với quê hương. Mỗi bài chia sẻ đều khiến tôi nhớ về những kỷ niệm tuổi thơ và tình yêu dành cho mảnh đất quê."
+                            </p>
+                            <div class="emotion-author">
+                                <div class="author-avatar">
+                                    <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Trần Văn Hùng">
+                                </div>
+                                <div class="author-info">
+                                    <h4>Trần Văn Hùng</h4>
+                                    <p>Kiều bào tại Mỹ</p>
+                                    <div class="emotion-rating">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 3 -->
+                    <div class="emotion-card" data-aos="fade-up" data-aos-delay="400" data-aos-duration="900">
+                        <div class="emotion-content">
+                            <div class="quote-icon">
+                                <i class="fas fa-quote-left"></i>
+                            </div>
+                            <p class="emotion-text">
+                                "Thông qua việc chia sẻ về quê hương, tôi đã kết nối được với nhiều bạn bè mới có cùng tình yêu với Việt Nam. Cảm ơn 'Hành Trình Quê Hương' đã tạo ra một cộng đồng tuyệt vời như vậy!"
+                            </p>
+                            <div class="emotion-author">
+                                <div class="author-avatar">
+                                    <img src="https://images.pexels.com/photos/1130626/pexels-photo-1130626.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Lê Thị Mai">
+                                </div>
+                                <div class="author-info">
+                                    <h4>Lê Thị Mai</h4>
+                                    <p>TP. Hồ Chí Minh</p>
+                                    <div class="emotion-rating">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 4 -->
+                    <div class="emotion-card" data-aos="fade-up" data-aos-delay="500" data-aos-duration="900">
+                        <div class="emotion-content">
+                            <div class="quote-icon">
+                                <i class="fas fa-quote-left"></i>
+                            </div>
+                            <p class="emotion-text">
+                                "Chiến dịch đã khuyến khích tôi khám phá nhiều địa điểm đẹp ở quê nhà mà trước đây chưa từng biết đến. Mỗi chuyến đi đều mang lại những trải nghiệm và cảm xúc mới mẻ."
+                            </p>
+                            <div class="emotion-author">
+                                <div class="author-avatar">
+                                    <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Phạm Đức Thành">
+                                </div>
+                                <div class="author-info">
+                                    <h4>Phạm Đức Thành</h4>
+                                    <p>Đà Nẵng</p>
+                                    <div class="emotion-rating">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 5 -->
+                    <div class="emotion-card" data-aos="fade-up" data-aos-delay="600" data-aos-duration="900">
+                        <div class="emotion-content">
+                            <div class="quote-icon">
+                                <i class="fas fa-quote-left"></i>
+                            </div>
+                            <p class="emotion-text">
+                                "Được thấy những hình ảnh và câu chuyện về các vùng miền khác nhau của Việt Nam thật sự mở mang tầm mắt. Tôi hiểu thêm về sự đa dạng và phong phú của đất nước mình."
+                            </p>
+                            <div class="emotion-author">
+                                <div class="author-avatar">
+                                    <img src="https://images.pexels.com/photos/1681010/pexels-photo-1681010.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Hoàng Thị Lan">
+                                </div>
+                                <div class="author-info">
+                                    <h4>Hoàng Thị Lan</h4>
+                                    <p>Cần Thơ</p>
+                                    <div class="emotion-rating">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial 6 -->
+                    <div class="emotion-card" data-aos="fade-up" data-aos-delay="700" data-aos-duration="900">
+                        <div class="emotion-content">
+                            <div class="quote-icon">
+                                <i class="fas fa-quote-left"></i>
+                            </div>
+                            <p class="emotion-text">
+                                "Tôi rất vui khi thấy thế hệ trẻ quan tâm và yêu thương quê hương. 'Hành Trình Quê Hương' đã tạo ra một làn sóng tích cực, lan tỏa tình yêu đất nước đến mọi người."
+                            </p>
+                            <div class="emotion-author">
+                                <div class="author-avatar">
+                                    <img src="https://images.pexels.com/photos/1043471/pexels-photo-1043471.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Ngô Văn Tuấn">
+                                </div>
+                                <div class="author-info">
+                                    <h4>Ngô Văn Tuấn</h4>
+                                    <p>Huế</p>
+                                    <div class="emotion-rating">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Statistics -->
+                <div class="community-stats" data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000">
+                    <div class="stats-grid">
+                        <div class="stat-item">
+                            <div class="stat-number">2,500+</div>
+                            <div class="stat-label">Người tham gia</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-number">1,200+</div>
+                            <div class="stat-label">Bài dự thi</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-number">63</div>
+                            <div class="stat-label">Tỉnh thành</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-number">98%</div>
+                            <div class="stat-label">Hài lòng</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Cách đăng ký -->
         <section id="dang-ky" class="cta-section section-padding">
             <div class="container">
@@ -508,7 +710,7 @@
                         <a href="#" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
                         <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                     </div>
-                    <a href="#dang-ky" class="btn btn-secondary footer-cta-btn">Đăng Ký Ngay</a>
+                    <a href="#dang-ky" class="btn btn-primary footer-cta-btn">Đăng Ký Ngay</a>
                 </div>
             </div>
 
