--- a/index.html
+++ b/index.html
@@ -436,10 +436,10 @@
                             </p>
                             <div class="emotion-author">
                                 <div class="author-avatar">
-                                    <img src="https://images.pexels.com/photos/1239291/pexels-photo-1239291.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Nguyễn Minh Anh">
+                                    <img src="https://images.pexels.com/photos/1239291/pexels-photo-1239291.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Đoàn Thanh Tín">
                                 </div>
                                 <div class="author-info">
-                                    <h4>Nguyễn Minh Anh</h4>
+                                    <h4>Đoàn Thanh Tín</h4>
                                     <p>Hà Nội</p>
                                     <div class="emotion-rating">
                                         <i class="fas fa-star"></i>
