--- a/index.html
+++ b/index.html
@@ -464,10 +464,10 @@
                             </p>
                             <div class="emotion-author">
                                 <div class="author-avatar">
-                                    <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Trần Văn Hùng">
+                                    <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Nguyễn Phạm Anh Thư">
                                 </div>
                                 <div class="author-info">
-                                    <h4>Trần Văn Hùng</h4>
+                                    <h4>Nguyễn Phạm Anh Thư</h4>
                                     <p>Kiều bào tại Mỹ</p>
                                     <div class="emotion-rating">
                                         <i class="fas fa-star"></i>
@@ -492,10 +492,10 @@
                             </p>
                             <div class="emotion-author">
                                 <div class="author-avatar">
-                                    <img src="https://images.pexels.com/photos/1130626/pexels-photo-1130626.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Lê Thị Mai">
+                                    <img src="https://images.pexels.com/photos/1130626/pexels-photo-1130626.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Trần Châu Thanh Phong">
                                 </div>
                                 <div class="author-info">
-                                    <h4>Lê Thị Mai</h4>
+                                    <h4>Trần Châu Thanh Phong</h4>
                                     <p>TP. Hồ Chí Minh</p>
                                     <div class="emotion-rating">
                                         <i class="fas fa-star"></i>
@@ -520,10 +520,10 @@
                             </p>
                             <div class="emotion-author">
                                 <div class="author-avatar">
-                                    <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Phạm Đức Thành">
+                                    <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Ngô Ngọc sơn">
                                 </div>
                                 <div class="author-info">
-                                    <h4>Phạm Đức Thành</h4>
+                                    <h4>Ngô Ngọc sơn</h4>
                                     <p>Đà Nẵng</p>
                                     <div class="emotion-rating">
                                         <i class="fas fa-star"></i>
@@ -548,10 +548,10 @@
                             </p>
                             <div class="emotion-author">
                                 <div class="author-avatar">
-                                    <img src="https://images.pexels.com/photos/1681010/pexels-photo-1681010.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Hoàng Thị Lan">
+                                    <img src="https://images.pexels.com/photos/1681010/pexels-photo-1681010.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Tít">
                                 </div>
                                 <div class="author-info">
-                                    <h4>Hoàng Thị Lan</h4>
+                                    <h4>Tít</h4>
                                     <p>Cần Thơ</p>
                                     <div class="emotion-rating">
                                         <i class="fas fa-star"></i>
@@ -576,10 +576,10 @@
                             </p>
                             <div class="emotion-author">
                                 <div class="author-avatar">
-                                    <img src="https://images.pexels.com/photos/1043471/pexels-photo-1043471.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Ngô Văn Tuấn">
+                                    <img src="https://images.pexels.com/photos/1043471/pexels-photo-1043471.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Tỉm">
                                 </div>
                                 <div class="author-info">
-                                    <h4>Ngô Văn Tuấn</h4>
+                                    <h4>Tỉm</h4>
                                     <p>Huế</p>
                                     <div class="emotion-rating">
                                         <i class="fas fa-star"></i>
