--- a/index.html
+++ b/index.html
@@ -548,7 +548,8 @@
                             </p>
                             <div class="emotion-author">
                                 <div class="author-avatar">
-                                    <img src="https://images.pexels.com/photos/1681010/pexels-photo-1681010.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Tít">
+                                    <i class="fa-regular fa-face-smile"></i>
+
                                 </div>
                                 <div class="author-info">
                                     <h4>Tít</h4>
