Thay thế avatar bằng icon user

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                             </p>
                             <div class="emotion-author">
                                 <div class="author-avatar">
-                                    <img src="https://images.pexels.com/photos/1239291/pexels-photo-1239291.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Đoàn Thanh Tín">
+                                    <i class="fas fa-user"></i>
                                 </div>
                                 <div class="author-info">
                                     <h4>Đoàn Thanh Tín</h4>
@@ -464,7 +464,7 @@
                             </p>
                             <div class="emotion-author">
                                 <div class="author-avatar">
-                                    <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Nguyễn Phạm Anh Thư">
+                                    <i class="fas fa-user"></i>
                                 </div>
                                 <div class="author-info">
                                     <h4>Nguyễn Phạm Anh Thư</h4>
@@ -492,7 +492,7 @@
                             </p>
                             <div class="emotion-author">
                                 <div class="author-avatar">
-                                    <img src="https://images.pexels.com/photos/1130626/pexels-photo-1130626.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Trần Châu Thanh Phong">
+                                    <i class="fas fa-user"></i>
                                 </div>
                                 <div class="author-info">
                                     <h4>Trần Châu Thanh Phong</h4>
@@ -520,10 +520,10 @@
                             </p>
                             <div class="emotion-author">
                                 <div class="author-avatar">
-                                    <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Ngô Ngọc sơn">
+                                    <i class="fas fa-user"></i>
                                 </div>
                                 <div class="author-info">
-                                    <h4>Ngô Ngọc sơn</h4>
+                                    <h4>Ngô Ngọc Sơn</h4>
                                     <p>Đà Nẵng</p>
                                     <div class="emotion-rating">
                                         <i class="fas fa-star"></i>
@@ -548,7 +548,7 @@
                             </p>
                             <div class="emotion-author">
                                 <div class="author-avatar">
-                                    <i class="fa-regular fa-face-smile"></i>
+                                    <i class="fas fa-user"></i>
                                 </div>
                                 <div class="author-info">
                                     <h4>Tít</h4>
@@ -576,7 +576,7 @@
                             </p>
                             <div class="emotion-author">
                                 <div class="author-avatar">
-                                    <img src="https://images.pexels.com/photos/1043471/pexels-photo-1043471.jpeg?auto=compress&cs=tinysrgb&w=100&h=100&fit=crop&crop=face" alt="Tỉm">
+                                    <i class="fas fa-user"></i>
                                 </div>
                                 <div class="author-info">
                                     <h4>Tỉm</h4>
