bài fix theo bản điểm ThanhPhong

--- a/index.html
+++ b/index.html
@@ -208,6 +208,11 @@
                         <p>Thông qua sự lan truyền trên mạng xã hội.</p>
                     </div>
                 </div>
+                <!-- Nút Mục Tiêu Cuộc Thi ------------------------------------------------------------------------------------------->
+        <div class="nav-buttons">
+            <button id="prevGoalBtn" class="btn-nav">&#8592</button>
+            <button id="nextGoalBtn" class="btn-nav">&#8594</button>
+        </div>
             </div>
         </section>
         <!-- Cách Tham Gia -->
@@ -424,6 +429,9 @@
                     Những chia sẻ chân thành từ trái tim của cộng đồng về tình yêu quê hương và ý nghĩa của chiến dịch.
                 </p>
                 
+                    <!-- Nút Cảm Xúc Cộng Đồng --------------------------------------------------------------------------------------------->
+                <div class="feedback-wrapper">
+            <button id="prevFeedbackBtn" class="btn-nav btn-custom-nav">&#8592;&#127806;</button>
                 <div class="emotions-grid">
                     <!-- Testimonial 1 -->
                     <div class="emotion-card" data-aos="fade-up" data-aos-delay="200" data-aos-duration="900">
@@ -593,6 +601,9 @@
                         </div>
                     </div>
                 </div>
+                 <!-- Nut Chuyen Trai ------------------------------------------------------------------------------------------------------>
+        <button id="nextFeedbackBtn" class="btn-nav btn-custom-nav">&#127806;&#8594;</button>
+        </div>
 
                 <!-- Statistics -->
                 <div class="community-stats" data-aos="fade-up" data-aos-delay="800" data-aos-duration="1000">
